--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
 
     <% posts.forEach(function(post) { %>
         <h1><%= post.title %></h1>
-        <p><%= post.body.substring(0, 100) + " ... " %><a href="/posts/<%= post.title %>">Read Mode</a></p>
+        <p><%= post.content.substring(0, 100) + " ... " %><a href="/posts/<%= post._id %>">Read Mode</a></p>
     <% }) %>
 
 <%- include("partials/footer") -%>
